--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.apache.poi:poi-ooxml:4.1.0' // needed for docx
+    compile 'org.apache.poi:poi:4.1.0'
 }
