--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.poi:poi-ooxml:4.1.0' // needed for docx
     compile 'org.apache.poi:poi:4.1.0'
+    compile 'net.sourceforge.jexcelapi:jxl:2.6.12'  // processing for MS Excel files
 }
