--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ repositories {
     jcenter()
 }
 
+jar {
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.apache.poi:poi-ooxml:4.1.0' // needed for docx
